Tools/Convert_GL.h_and_GLext.h_C-Include/oglGLext.h

typedef khronos_ssize_t GLsizeiptr;
typedef khronos_intptr_t GLintptr;
typedef char GLchar;
 void  glUniformMatrix2fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glUniformMatrix3fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glUniformMatrix4fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glValidateProgram (GLuint program_);
 void  glVertexAttrib1d (GLuint index, GLdouble x);
 void  glVertexAttrib1dv (GLuint index,GLdouble *v);
 void  glVertexAttrib1f (GLuint index, GLfloat x);
 void  glVertexAttrib1fv (GLuint index,GLfloat *v);
 void  glVertexAttrib1s (GLuint index, GLshort x);
 void  glVertexAttrib1sv (GLuint index,GLshort *v);
 void  glVertexAttrib2d (GLuint index, GLdouble x, GLdouble y);
 void  glVertexAttrib2dv (GLuint index,GLdouble *v);
 void  glVertexAttrib2f (GLuint index, GLfloat x, GLfloat y);
 void  glVertexAttrib2fv (GLuint index,GLfloat *v);
 void  glVertexAttrib2s (GLuint index, GLshort x, GLshort y);
 void  glVertexAttrib2sv (GLuint index,GLshort *v);
 void  glVertexAttrib3d (GLuint index, GLdouble x, GLdouble y, GLdouble z);
 void  glVertexAttrib3dv (GLuint index,GLdouble *v);
 void  glVertexAttrib3f (GLuint index, GLfloat x, GLfloat y, GLfloat z);
 void  glVertexAttrib3fv (GLuint index,GLfloat *v);
 void  glVertexAttrib3s (GLuint index, GLshort x, GLshort y, GLshort z);
 void  glVertexAttrib3sv (GLuint index,GLshort *v);
 void  glVertexAttrib4Nbv (GLuint index,GLbyte *v);
 void  glVertexAttrib4Niv (GLuint index,GLint *v);
 void  glVertexAttrib4Nsv (GLuint index,GLshort *v);
 void  glVertexAttrib4Nub (GLuint index, GLubyte x, GLubyte y, GLubyte z, GLubyte w);
 void  glVertexAttrib4Nubv (GLuint index,GLubyte *v);
 void  glVertexAttrib4Nuiv (GLuint index,GLuint *v);
 void  glVertexAttrib4Nusv (GLuint index,GLushort *v);
 void  glVertexAttrib4bv (GLuint index,GLbyte *v);
 void  glVertexAttrib4d (GLuint index, GLdouble x, GLdouble y, GLdouble z, GLdouble w);
 void  glVertexAttrib4dv (GLuint index,GLdouble *v);
 void  glVertexAttrib4f (GLuint index, GLfloat x, GLfloat y, GLfloat z, GLfloat w);
 void  glVertexAttrib4fv (GLuint index,GLfloat *v);
 void  glVertexAttrib4iv (GLuint index,GLint *v);
 void  glVertexAttrib4s (GLuint index, GLshort x, GLshort y, GLshort z, GLshort w);
 void  glVertexAttrib4sv (GLuint index,GLshort *v);
 void  glVertexAttrib4ubv (GLuint index,GLubyte *v);
 void  glVertexAttrib4uiv (GLuint index,GLuint *v);
 void  glVertexAttrib4usv (GLuint index,GLushort *v);
 void  glVertexAttribPointer (GLuint index, GLint size, GLenum type, GLboolean normalized, GLsizei stride,void *pointer);
 void  glUniformMatrix2x3fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glUniformMatrix3x2fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glUniformMatrix2x4fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glUniformMatrix4x2fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glUniformMatrix3x4fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glUniformMatrix4x3fv (GLint location, GLsizei count, GLboolean transpose,GLfloat *value);
 void  glColorMaski (GLuint index, GLboolean r, GLboolean g, GLboolean b, GLboolean a);
 void  glGetBooleani_v (GLenum target, GLuint index, GLboolean *data);
 void  glGetIntegeri_v (GLenum target, GLuint index, GLint *data);
 void  glEnablei (GLenum target, GLuint index);
 void  glDisablei (GLenum target, GLuint index);
 GLboolean  glIsEnabledi (GLenum target, GLuint index);
 void  glBeginTransformFeedback (GLenum primitiveMode);
 void  glEndTransformFeedback (void);
 void  glBindBufferRange (GLenum target, GLuint index, GLuint buffer, GLintptr offset, GLsizeiptr size);
 void  glBindBufferBase (GLenum target, GLuint index, GLuint buffer);
 void  glTransformFeedbackVaryings (GLuint program_, GLsizei count,GLchar **varyings, GLenum bufferMode);
 void  glGetTransformFeedbackVarying (GLuint program_, GLuint index, GLsizei bufSize, GLsizei *length, GLsizei *size, GLenum *type, GLchar *name);
 void  glClampColor (GLenum target, GLenum clamp);
 void  glBeginConditionalRender (GLuint id, GLenum mode);
 void  glEndConditionalRender (void);
 void  glVertexAttribIPointer (GLuint index, GLint size, GLenum type, GLsizei stride,void *pointer);
 void  glGetVertexAttribIiv (GLuint index, GLenum pname, GLint *params);
 void  glGetVertexAttribIuiv (GLuint index, GLenum pname, GLuint *params);
 void  glVertexAttribI1i (GLuint index, GLint x);
 void  glVertexAttribI2i (GLuint index, GLint x, GLint y);
 void  glVertexAttribI3i (GLuint index, GLint x, GLint y, GLint z);
 void  glVertexAttribI4i (GLuint index, GLint x, GLint y, GLint z, GLint w);
 void  glVertexAttribI1ui (GLuint index, GLuint x);
 void  glVertexAttribI2ui (GLuint index, GLuint x, GLuint y);
 void  glVertexAttribI3ui (GLuint index, GLuint x, GLuint y, GLuint z);
 void  glVertexAttribI4ui (GLuint index, GLuint x, GLuint y, GLuint z, GLuint w);
 void  glVertexAttribI1iv (GLuint index,GLint *v);
 void  glVertexAttribI2iv (GLuint index,GLint *v);
 void  glVertexAttribI3iv (GLuint index,GLint *v);
 void  glVertexAttribI4iv (GLuint index,GLint *v);
 void  glVertexAttribI1uiv (GLuint index,GLuint *v);
 void  glVertexAttribI2uiv (GLuint index,GLuint *v);