Versuche/LCL-native_glad/glad_gl.pas

  glUniformMatrix2fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix3fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix4fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glValidateProgram: procedure(program_: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib1d: procedure(index: GLuint; x: GLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib1dv: procedure(index: GLuint; v: PGLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib1f: procedure(index: GLuint; x: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib1fv: procedure(index: GLuint; v: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib1s: procedure(index: GLuint; x: GLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib1sv: procedure(index: GLuint; v: PGLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib2d: procedure(index: GLuint; x: GLdouble; y: GLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib2dv: procedure(index: GLuint; v: PGLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib2f: procedure(index: GLuint; x: GLfloat; y: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib2fv: procedure(index: GLuint; v: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib2s: procedure(index: GLuint; x: GLshort; y: GLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib2sv: procedure(index: GLuint; v: PGLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib3d: procedure(index: GLuint; x: GLdouble; y: GLdouble; z: GLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib3dv: procedure(index: GLuint; v: PGLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib3f: procedure(index: GLuint; x: GLfloat; y: GLfloat; z: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib3fv: procedure(index: GLuint; v: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib3s: procedure(index: GLuint; x: GLshort; y: GLshort; z: GLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib3sv: procedure(index: GLuint; v: PGLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4Nbv: procedure(index: GLuint; v: PGLbyte); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4Niv: procedure(index: GLuint; v: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4Nsv: procedure(index: GLuint; v: PGLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4Nub: procedure(index: GLuint; x: GLubyte; y: GLubyte; z: GLubyte; w: GLubyte); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4Nubv: procedure(index: GLuint; v: PGLubyte); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4Nuiv: procedure(index: GLuint; v: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4Nusv: procedure(index: GLuint; v: PGLushort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4bv: procedure(index: GLuint; v: PGLbyte); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4d: procedure(index: GLuint; x: GLdouble; y: GLdouble; z: GLdouble; w: GLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4dv: procedure(index: GLuint; v: PGLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4f: procedure(index: GLuint; x: GLfloat; y: GLfloat; z: GLfloat; w: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4fv: procedure(index: GLuint; v: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4iv: procedure(index: GLuint; v: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4s: procedure(index: GLuint; x: GLshort; y: GLshort; z: GLshort; w: GLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4sv: procedure(index: GLuint; v: PGLshort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4ubv: procedure(index: GLuint; v: PGLubyte); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4uiv: procedure(index: GLuint; v: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttrib4usv: procedure(index: GLuint; v: PGLushort); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribPointer: procedure(index: GLuint; size: GLint; type_: GLenum; normalized: GLboolean; stride: GLsizei; pointer: Pointer); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix2x3fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix3x2fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix2x4fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix4x2fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix3x4fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniformMatrix4x3fv: procedure(location: GLint; Count: GLsizei; transpose: GLboolean; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glColorMaski: procedure(index: GLuint; r: GLboolean; g: GLboolean; b: GLboolean; a: GLboolean); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetBooleani_v: procedure(target: GLenum; index: GLuint; Data: PGLboolean); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetIntegeri_v: procedure(target: GLenum; index: GLuint; Data: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glEnablei: procedure(target: GLenum; index: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDisablei: procedure(target: GLenum; index: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glIsEnabledi: function(target: GLenum; index: GLuint): GLboolean; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBeginTransformFeedback: procedure(primitiveMode: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glEndTransformFeedback: procedure(); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBindBufferRange: procedure(target: GLenum; index: GLuint; buffer: GLuint; offset: GLintptr; size: GLsizeiptr); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBindBufferBase: procedure(target: GLenum; index: GLuint; buffer: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glTransformFeedbackVaryings: procedure(program_: GLuint; Count: GLsizei; varyings: PPGLchar; bufferMode: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetTransformFeedbackVarying: procedure(program_: GLuint; index: GLuint; bufSize: GLsizei; length: PGLsizei; size: PGLsizei; type_: PGLenum; Name: PGLchar); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glClampColor: procedure(target: GLenum; clamp: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBeginConditionalRender: procedure(id: GLuint; mode: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glEndConditionalRender: procedure(); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribIPointer: procedure(index: GLuint; size: GLint; type_: GLenum; stride: GLsizei; pointer: Pointer); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetVertexAttribIiv: procedure(index: GLuint; pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetVertexAttribIuiv: procedure(index: GLuint; pname: GLenum; params: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI1i: procedure(index: GLuint; x: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI2i: procedure(index: GLuint; x: GLint; y: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI3i: procedure(index: GLuint; x: GLint; y: GLint; z: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI4i: procedure(index: GLuint; x: GLint; y: GLint; z: GLint; w: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI1ui: procedure(index: GLuint; x: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI2ui: procedure(index: GLuint; x: GLuint; y: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI3ui: procedure(index: GLuint; x: GLuint; y: GLuint; z: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI4ui: procedure(index: GLuint; x: GLuint; y: GLuint; z: GLuint; w: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI1iv: procedure(index: GLuint; v: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI2iv: procedure(index: GLuint; v: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI3iv: procedure(index: GLuint; v: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI4iv: procedure(index: GLuint; v: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI1uiv: procedure(index: GLuint; v: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glVertexAttribI2uiv: procedure(index: GLuint; v: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
